--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "jsdom": "^17.0.0",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.143",
     "@types/jest": "^26.0.24",
+    "@types/jsdom": "^16.2.13",
+    "@types/node-fetch": "^2.5.12",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/webpack": "^4.41.30",
     "copy-webpack-plugin": "^6.1.0",
     "glob": "^7.1.6",
     "jest": "^26.6.3",
