--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "chrome-extension-typescript-starter",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack --config webpack/webpack.dev.js --watch",
-    "build": "webpack --config webpack/webpack.prod.js",
+    "watch": "webpack --config webpack/webpack.dev.ts --watch",
+    "build": "webpack --config webpack/webpack.prod.ts",
     "clean": "rimraf dist",
     "test": "npx jest",
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
@@ -24,12 +24,14 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.143",
+    "@types/copy-webpack-plugin": "^6.4.0",
     "@types/jest": "^26.0.24",
     "@types/jsdom": "^16.2.13",
     "@types/node-fetch": "^2.5.12",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/webpack": "^4.41.30",
+    "@types/webpack-merge": "^4.1.5",
     "copy-webpack-plugin": "^6.1.0",
     "glob": "^7.1.6",
     "jest": "^26.6.3",
@@ -37,6 +39,7 @@
     "rimraf": "^3.0.2 ",
     "ts-jest": "^26.5.5",
     "ts-loader": "^6.2.1",
+    "ts-node": "^10.2.1",
     "typescript": "~3.8.3 ",
     "webpack": "^4.44.1",
     "webpack-cli": "~3.3.11",
