--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "@atlaskit/css-reset": "^6.1.2",
+    "@atlaskit/menu": "^1.1.0",
+    "@atlaskit/theme": "^11.5.0",
+    "@atlaskit/tokens": "^0.1.1",
     "jsdom": "^17.0.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
@@ -33,10 +37,12 @@
     "@types/webpack": "^4.41.30",
     "@types/webpack-merge": "^4.1.5",
     "copy-webpack-plugin": "^6.1.0",
+    "css-loader": "^5.2.7",
     "glob": "^7.1.6",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2 ",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
     "ts-loader": "^6.2.1",
     "ts-node": "^10.2.1",
