--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "@atlaskit/button": "^16.1.0",
+    "@atlaskit/icon": "^21.8.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^3.4.10"
   },
   "devDependencies": {
     "@types/chrome": "0.0.143",
