--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsdom": "^17.0.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.143",
