--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/webpack": "^4.41.30",
     "@types/webpack-merge": "^4.1.5",
+    "async-delay-queue": "^1.0.11",
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^5.2.7",
     "glob": "^7.1.6",
