--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "outDir": "dist/js",
     "noEmitOnError": true,
     "jsx": "react",
-    "typeRoots": ["node_modules/@types"]
+    "baseUrl": "./",
+    "typeRoots": ["node_modules/@types"],
+    "paths": {
+      "*": ["src/@types/*", "*"]
+    }
   }
 }
