--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,11 @@
     "default_popup": "popup.html"
   },
 
+  "web_accessible_resources": [
+    "screenshots.html",
+    "js/display.js"
+  ],
+
   "content_scripts": [
       {
           "matches": ["<all_urls>"],
