--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@atlaskit/menu": "^1.1.0",
     "@atlaskit/theme": "^11.5.0",
     "@atlaskit/tokens": "^0.1.1",
+    "@types/jquery": "^2.0.47",
+    "jquery": "^3.6.0",
     "jsdom": "^17.0.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
