--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   },
   "dependencies": {
     "@atlaskit/css-reset": "^6.1.2",
+    "@atlaskit/flag": "^14.4.0",
     "@atlaskit/menu": "^1.1.0",
     "@atlaskit/theme": "^11.5.0",
     "@atlaskit/tokens": "^0.1.1",
     "jsdom": "^17.0.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^3.4.10"
   },
   "devDependencies": {
     "@types/chrome": "0.0.143",
