--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.143",
+    "@types/chrome": "^0.0.154",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/jest": "^26.0.24",
     "@types/jsdom": "^16.2.13",
