--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "typeRoots": ["node_modules/@types"],
     "paths": {
       "*": ["src/@types/*", "*"]
-    }
+    },
+    "resolveJsonModule": true
   }
 }
