--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "styled-components": "^3.4.10"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.143",
+    "@types/chrome": "^0.0.154",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/jest": "^26.0.24",
     "@types/jsdom": "^16.2.13",
