--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   },
   "dependencies": {
     "@atlaskit/button": "^16.1.0",
-    "@atlaskit/icon": "^21.8.0",
     "@atlaskit/css-reset": "^6.1.2",
+    "@atlaskit/icon": "^21.8.0",
     "@atlaskit/menu": "^1.1.0",
     "@atlaskit/theme": "^11.5.0",
     "@atlaskit/tokens": "^0.1.1",
     "jsdom": "^17.0.0",
+    "jszip": "^3.7.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
