--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
   },
   "dependencies": {
     "@atlaskit/button": "^16.1.0",
-    "@atlaskit/icon": "^21.8.0",
     "@atlaskit/css-reset": "^6.1.2",
     "@atlaskit/flag": "^14.4.0",
+    "@atlaskit/icon": "^21.8.0",
     "@atlaskit/menu": "^1.1.0",
     "@atlaskit/motion": "^1.0.3",
+    "@atlaskit/textfield": "^5.1.0",
     "@atlaskit/theme": "^11.5.0",
+    "@atlaskit/toggle": "^12.2.2",
     "@atlaskit/tokens": "^0.1.1",
-    "@types/jquery": "^2.0.47",
-    "jquery": "^3.6.0",
+    "@atlaskit/tooltip": "^17.4.0",
     "@emotion/cache": "^10.0.29",
     "@emotion/core": "^10.1.1",
+    "@types/jquery": "^2.0.47",
+    "jquery": "^3.6.0",
     "jsdom": "^17.0.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
