--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@atlaskit/button": "^16.1.0",
     "@atlaskit/css-reset": "^6.1.2",
+    "@atlaskit/flag": "^14.4.0",
     "@atlaskit/icon": "^21.8.0",
     "@atlaskit/menu": "^1.1.0",
     "@atlaskit/theme": "^11.5.0",
