--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "glob": "^7.1.6",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2 ",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
