--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,7 @@
   },
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "uSafe_icon.png",
     "default_popup": "popup.html"
   },
 
