--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "ES2019",
     "esModuleInterop": true,
     "sourceMap": false,
     "rootDir": ".",
